--- a/bkw_batterie_nulleinspeisung.yaml
+++ b/bkw_batterie_nulleinspeisung.yaml
@@ -1,187 +1,183 @@
 blueprint:
-  name: Marstek B2500-D Nulleinspeisung Optimiert
+  name: PV Nulleinspeisung mit Batterie-Steuerung
   description: >
-    Steuerung eines Marstek B2500-D Wechselrichters zur echten Nulleinspeisung.
-    Berücksichtigt alle Phasen, PV-Ertrag, LowBat-Priorität und Cooldowns.
-    Version 0.1
+    Steuert einen Marstek B2500 + Deye 800W Wechselrichter für Nulleinspeisung
+    auf Basis des saldierenden Smarty-Stromzählers. 
+    Enthält Min/Max Clamp, LowBat-Priorität und Cooldowns.
   domain: automation
   input:
-    micro_inverter_sensor:
-      name: MicroInverter PV (W)
-      description: Liefert die aktuelle PV-Leistung des MicroInverters
+    calc_house_consumption:
+      name: Hausverbrauch (Template-Sensor)
+      description: >
+        Template-Sensor, der den echten Hausverbrauch berechnet.
       selector:
         entity:
           domain: sensor
-    power_consumed_p1:
-      name: Verbrauch Phase 1 (kW)
+
+    battery_level:
+      name: Batterie Ladezustand
       selector:
         entity:
           domain: sensor
-    power_consumed_p2:
-      name: Verbrauch Phase 2 (kW)
-      selector:
-        entity:
-          domain: sensor
-    power_consumed_p3:
-      name: Verbrauch Phase 3 (kW)
-      selector:
-        entity:
-          domain: sensor
-    pv_phase2:
-      name: PV Phase 2 (kW)
-      selector:
-        entity:
-          domain: sensor
-    batteriestand_sensor:
-      name: Batterie-Prozent Sensor
-      selector:
-        entity:
-          domain: sensor
-    charging_mode_select:
-      name: Lademodus Select
-      selector:
-        entity:
-          domain: select
+
     output_value_number:
-      name: Zielleistung WR (Number)
+      name: Wechselrichter Leistungsvorgabe
       selector:
         entity:
           domain: number
-    switch_enable:
-      name: Aktivierungsschalter WR
+
+    wr_switch:
+      name: Wechselrichter Schalter
       selector:
         entity:
           domain: switch
-    min_watt:
-      name: Minimalwert WR-Leistung (W)
+
+    charging_mode_select:
+      name: Lade/Entlade Modus der Batterie
+      selector:
+        entity:
+          domain: select
+
+    min_output:
+      name: Mindestleistung WR
       default: 30
       selector:
         number:
           min: 0
-          max: 1000
+          max: 800
           unit_of_measurement: W
-    max_watt:
-      name: Maximalwert WR-Leistung (W)
+          step: 10
+          mode: slider
+
+    max_output:
+      name: Maximalleistung WR
       default: 800
       selector:
         number:
-          min: 0
-          max: 10000
+          min: 100
+          max: 800
           unit_of_measurement: W
+          step: 10
+          mode: slider
+
     lowbat_threshold:
-      name: LowBat Schwelle (%)
+      name: LowBat-Schwelle (%)
       default: 11
       selector:
         number:
-          min: 0
-          max: 100
-    cooldown_high:
-      name: Cooldown Erhöhung (Sekunden)
+          min: 5
+          max: 50
+          unit_of_measurement: "%"
+          step: 1
+
+    cooldown_increase:
+      name: Cooldown bei Erhöhung (Sekunden)
       default: 180
       selector:
         number:
           min: 0
-          max: 3600
-    cooldown_low:
-      name: Cooldown Senkung (Sekunden)
+          max: 600
+          step: 10
+          unit_of_measurement: s
+
+    cooldown_decrease:
+      name: Cooldown bei Reduzierung (Sekunden)
       default: 15
       selector:
         number:
           min: 0
-          max: 3600
-    cooldown_marker:
-      name: Input Datetime Cooldown Marker
-      description: Wird zur Überprüfung der Cooldowns verwendet
-      selector:
-        entity:
-          domain: input_datetime
+          max: 120
+          step: 5
+          unit_of_measurement: s
+
+mode: restart
+max_exceeded: silent
 
 trigger:
   - platform: state
-    entity_id:
-      - !input micro_inverter_sensor
-      - !input power_consumed_p1
-      - !input power_consumed_p2
-      - !input power_consumed_p3
-      - !input pv_phase2
-  - platform: numeric_state
-    entity_id: !input batteriestand_sensor
-    below: !input lowbat_threshold
+    entity_id: !input calc_house_consumption
+  - platform: state
+    entity_id: !input battery_level
 
 variables:
-  verbrauch: >-
-    {{ (states(!input.micro_inverter_sensor)|float
-       + states(!input.power_consumed_p1)|float * 1000
-       + states(!input.power_consumed_p2)|float * 1000
-       + states(!input.power_consumed_p3)|float * 1000
-       - states(!input.pv_phase2)|float * 1000) }}
-  batteriestand: "{{ states(!input.batteriestand_sensor)|float }}"
-  now_ts: "{{ as_timestamp(now()) }}"
-  last_trigger_ts: "{{ as_timestamp(states(!input.cooldown_marker)) if states(!input.cooldown_marker) not in [None,'unknown','unavailable'] else 0 }}"
-
-mode: single
+  hausverbrauch: "{{ states(!input 'calc_house_consumption') | float(0) }}"
+  soc: "{{ states(!input 'battery_level') | float(0) }}"
+  min_output: !input min_output
+  max_output: !input max_output
+  lowbat_threshold: !input lowbat_threshold
 
 action:
   - choose:
-      # --- LowBat Priorität ---
+      # ---- LowBat Vorrang ----
       - conditions:
-          - condition: numeric_state
-            entity_id: !input batteriestand_sensor
-            below: !input lowbat_threshold
+          - condition: template
+            value_template: "{{ soc < lowbat_threshold }}"
         sequence:
           - service: select.select_option
             target:
-              entity_id: !input.charging_mode_select
+              entity_id: !input charging_mode_select
             data:
-              option: "Fully Charge Then Discharge"
+              option: charge
+          - service: switch.turn_on
+            target:
+              entity_id: !input wr_switch
           - service: number.set_value
             target:
-              entity_id: !input.output_value_number
+              entity_id: !input output_value_number
             data:
-              value: 50
-          - service: switch.turn_off
-            target:
-              entity_id: !input.switch_enable
-          - stop: "Akku LowBat, Aktion beendet"
+              value: "{{ max_output }}"
 
-      # --- Normalbetrieb ---
+      # ---- Normalbetrieb ----
       - conditions:
           - condition: template
-            value_template: "{{ verbrauch > 0 }}"
+            value_template: "{{ soc >= lowbat_threshold }}"
         sequence:
           - variables:
-              zielwert: >-
-                {% set val = verbrauch %}
-                {% if val < min_watt %} {{ min_watt }}
-                {% elif val > max_watt %} {{ max_watt }}
-                {% else %} {{ val | round(0) }} {% endif %}
-              cooldown_passed: >-
-                {% set diff = now_ts - last_trigger_ts %}
-                {% if val > states(!input.output_value_number)|float %}
-                  {{ diff > cooldown_high }}
+              zielwert: >
+                {% set val = hausverbrauch %}
+                {% if val < min_output %}
+                  {{ min_output }}
+                {% elif val > max_output %}
+                  {{ max_output }}
                 {% else %}
-                  {{ diff > cooldown_low }}
+                  {{ val }}
                 {% endif %}
+
+          # Wechselrichter einschalten
+          - service: switch.turn_on
+            target:
+              entity_id: !input wr_switch
+
+          # Lade/Entlade-Modus auf Auto
+          - service: select.select_option
+            target:
+              entity_id: !input charging_mode_select
+            data:
+              option: auto
+
+          # Leistung nur anpassen wenn Cooldowns erfüllt
           - choose:
               - conditions:
                   - condition: template
-                    value_template: "{{ cooldown_passed }}"
+                    value_template: >
+                      {{ zielwert > states(!input 'output_value_number')|float(0) }}
                 sequence:
+                  - delay: !input cooldown_increase
                   - service: number.set_value
                     target:
-                      entity_id: !input.output_value_number
+                      entity_id: !input output_value_number
                     data:
                       value: "{{ zielwert }}"
-                  - service: switch.turn_on
+              - conditions:
+                  - condition: template
+                    value_template: >
+                      {{ zielwert < states(!input 'output_value_number')|float(0) }}
+                sequence:
+                  - delay: !input cooldown_decrease
+                  - service: number.set_value
                     target:
-                      entity_id: !input.switch_enable
-                  - service: select.select_option
-                    target:
-                      entity_id: !input.charging_mode_select
+                      entity_id: !input output_value_number
                     data:
-                      option: "Simultaneous Charging/Discharging"
-                  - service: input_datetime.set_datetime
-                    target:
-                      entity_id: !input.cooldown_marker
-                    data:
-                      timestamp: "{{ now_ts }}"
+                      value: "{{ zielwert }}"
+
+          
